# chatbot

./: .env.example  .gitignore  README.md  agent.py  extract_prices.py  full_meat_knowledge.txt  meat_catalog.json  mongo.py  pyproject.toml  requirements.txt  scrape_site.py  ui.py  ui_cloud.py  ui_streamlit.py  ui_vercel.py  vercel.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
