[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-core>=0.2.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "streamlit>=1.55.0",
    "pymongo>=4.6.0",
    "requests>=2.31.0",
]
